parser/src/tests/corpus/negatives/invalid-let-syntax/expected
Error from "negatives/invalid-let-syntax/input", line 1:
| let {
|     ^
|
+-> Syntax error: while parsing let-expression, unexpected '{' while expecting ' ' or '\n'

